<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.activity.UserSignUpActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp120"
        android:layout_marginBottom="@dimen/dp20"
        android:src="@drawable/img_no"
        app:layout_constraintBottom_toTopOf="@id/ivGlobe"
        app:layout_constraintEnd_toEndOf="@id/ivGlobe"
        app:layout_constraintStart_toStartOf="@id/ivGlobe" />

    <ImageView
        android:id="@+id/ivGlobe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_no_internet_globe"
        app:layout_constraintBottom_toTopOf="@id/cvGoToHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp40"
        android:fontFamily="@font/general_sans_semibold"
        android:text="@string/ooops"
        android:textColor="@color/color_3C3B3E"
        android:textSize="@dimen/sp36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivGlobe" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp30"
        android:fontFamily="@font/general_sans_medium"
        android:text="@string/no_internet"
        android:textColor="@color/color_71717A"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOops" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginToYourAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp10"
        android:fontFamily="@font/general_sans_medium"
        android:text="@string/check_your_internet_connection"
        android:textColor="@color/color_ADADB3"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNoInternet" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvGoToHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp58"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp45"
        app:cardBackgroundColor="@color/color_E94826"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="0dp"
        app:contentPadding="@dimen/dp17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/general_sans_semibold"
            android:text="@string/go_to_home"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>